learning how to use got

--- a/TP curso/sopacalabaza.html
+++ b/TP curso/sopacalabaza.html
@@ -134,7 +134,7 @@
                 <a class=smallicon href="https://www.linkedin.com" target="_blank"> <i class="fa fa-linkedin"
                         aria-hidden="true"></i></a> 
             </div>
-
+<!-- test git -->
             <h5>
                 Derechos reservados 2020
             </h5>
