--- a/TP curso/registrese.html
+++ b/TP curso/registrese.html
@@ -22,7 +22,7 @@
                 <a class=navcustom href="registrese.html" class="link"> Registrese</a>
                 <a class=navcustom href="sucursales.html" class="link"> Sucursales</a>
             </div>
-
+   
             <h1><b>Registrese</b></h1>
 
             </div>
@@ -34,11 +34,11 @@
 
         <form action="show_data.html" target="_blank" class="formulario" aria-label="Formulario de registro">
             <div class="form-group">
-                <label for="firstname">Nombre:</label> <input type="text" name="firstname"
-                    placeholder="Ingrese su nombre...">
+                <label for="firstname">Nombre:</label> <input type="text" name="firstname" 
+                    placeholder="Ingrese su nombre..." required> 
                 <label for="lastname">Apellido:</label> <input type="text" name="lastname"
-                    placeholder="Ingrese su apellido...">
-                <label for="email">Email:</label> <input type="email" name="email" placeholder="Ingrese su email...">
+                    placeholder="Ingrese su apellido..." required>
+                <label for="email">Email:</label> <input type="email" name="email" placeholder="Ingrese su email..." required>
 
                 <label for="address">Direccion:</label> <input type="text" name="address"
                     placeholder="Ingrese su direccion...">
