--- a/TP curso/acerca.html
+++ b/TP curso/acerca.html
@@ -8,6 +8,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pagina de Ejemplo</title>
+  <link rel="stylesheet" href="css/estilos.css">
+
 </head>
 
 <body>
@@ -24,16 +26,10 @@
       <h1><B>Acerca de nosotros</B></h1>
       </div>
     </Header>
-    <h3><B><U>
-
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum deleniti illo nobis id ipsam dolorum est,
-          maiores adipisci aut! Totam, quod fuga? Voluptates eaque id soluta debitis, nisi fuga animi!
-        </U></B></h3>
-
-    <h3><B><U>
-
-          Buscanos en las redes
-        </U></B></h3>
+    <h2>
+      LLamenos al <strong>0-800-Comida</strong>
+    </h2>
+    <div class="anim">Esperamos su llamado! </div>
 
     <iframe
       src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2F20531316728%2Fposts%2F10154009990506729%2F&width=500&show_text=true&height=292&appId"
@@ -41,29 +37,29 @@
       allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" class="center"></iframe>
   </main>
 
-      <!--Comentario:  ACA EMPIEZA EL FOOTER -->
-      <footer>
-        <div>
-            <div>
-                <a class=smallicon href="https://www.twitter.com" target="_blank"> <i class="fa fa-twitter"
-                        aria-hidden="true"></i></a>
-                <a class=smallicon href="https://www.facebook.com" target="_blank"> <i class="fa fa-facebook"
-                        aria-hidden="true"></i></a> 
-                <a class=smallicon href="https://www.whatsappweb.com" target="_blank"> <i class="fa fa-whatsapp"
-                        aria-hidden="true"></i></a> 
-                <a class=smallicon href="https://www.instagram.com" target="_blank"> <i class="fa fa-instagram"
-                        aria-hidden="true"></i></a> 
-                <a class=smallicon href="https://www.linkedin.com" target="_blank"> <i class="fa fa-linkedin"
-                        aria-hidden="true"></i></a> 
-            </div>
+  <!--Comentario:  ACA EMPIEZA EL FOOTER -->
+  <footer>
+    <div>
+      <div>
+        <a class=smallicon href="https://www.twitter.com" target="_blank"> <i class="fa fa-twitter"
+            aria-hidden="true"></i></a>
+        <a class=smallicon href="https://www.facebook.com" target="_blank"> <i class="fa fa-facebook"
+            aria-hidden="true"></i></a>
+        <a class=smallicon href="https://www.whatsappweb.com" target="_blank"> <i class="fa fa-whatsapp"
+            aria-hidden="true"></i></a>
+        <a class=smallicon href="https://www.instagram.com" target="_blank"> <i class="fa fa-instagram"
+            aria-hidden="true"></i></a>
+        <a class=smallicon href="https://www.linkedin.com" target="_blank"> <i class="fa fa-linkedin"
+            aria-hidden="true"></i></a>
+      </div>
 
-            <h5>
-                Derechos reservados 2020
-            </h5>
+      <h5>
+        Derechos reservados 2020
+      </h5>
 
-        </div>
+    </div>
 
-    </footer>
+  </footer>
 
 
 
