--- a/TP curso/contacto.html
+++ b/TP curso/contacto.html
@@ -28,29 +28,19 @@
             </div>
         </Header>
 
-        <h2>
-            LLamenos al <strong>0-800-Comida</strong>
-        </h2>
-        <div class="anim">Esperamos su llamado! </div>
-
-
-
         <script src="js/validatecontact.js"></script>
   
 
        
-        <form action="show_data.html" target="_blank" class="formulario" aria-label="Formulario de Contacto">
-            <div class="form-group">
+        <form action="show_data.html" target="_blank" class="formulario" aria-label="Formulario de Contacto" onsubmit="return validacion()" > 
                 <label for="firstname">Nombre:</label> <input type="text" name="firstname" id="firstname"
                     placeholder="Ingrese su nombre...">
-                <!-- <label for="lastname">Apellido:</label> <input type="text" name="lastname"
+                <label for="lastname">Apellido:</label> <input type="text" name="lastname" id="lastname"
                     placeholder="Ingrese su apellido...">
-                <label for="email">Email:</label> <input type="email" name="email" placeholder="Ingrese su email...">
-                <label for="telefono">Telefono:</label> <input type="text" name="phone"
+                <label for="email">Email:</label> <input type="text" name="email" id="email" placeholder="Ingrese su email...">
+                <label for="telefono">Telefono:</label> <input type="text" name="phone" id="phone"
                     placeholder="Ingrese su telefono...">
- -->
-            </div>
-            <input type="submit" value="Enviar" id="sendbutton">
+            <input type="submit" value="Enviar" id="sendbutton" >
 
         </form>
 
