--- a/TP curso/index.html
+++ b/TP curso/index.html
@@ -18,14 +18,14 @@
 
         <Header>
 
-            <div class="row">
+            <div>
                 <a class=nav href="index.html" class="link"> Home</a>
-                <a class=nav href="acerca.html" class="link"> Acerca de</a>
+                <a class=nav href="acerca.html" class="link"> Acerca</a>
                 <a class=nav href="contacto.html" class="link"> Contacto</a>
-                <a class=nav href="registrese.html" class="link"> Registrese</a>
+                <a class=nav href="registrese.html" class="link"> Registro</a>
                 <a class=nav href="sucursales.html" class="link"> Sucursales</a>
             </div>
-     
+            
             <h1><B>La cocina de Matias</B> </h1>
 
         </Header>
