--- a/TP curso/registrese.html
+++ b/TP curso/registrese.html
@@ -9,20 +9,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Registro</title>
+    <title>bootstrap</title>
 </head>
 
 <body>
     <main>
         <Header>
             <div>
-                <a class=navcustom href="index.html" class="link"> Home</a>
-                <a class=navcustom href="acerca.html" class="link"> Acerca de</a>
-                <a class=navcustom href="contacto.html" class="link"> Contacto</a>
-                <a class=navcustom href="registrese.html" class="link"> Registrese</a>
-                <a class=navcustom href="sucursales.html" class="link"> Sucursales</a>
+                <a class=nav href="index.html" class="link"> Home</a>
+                <a class=nav href="acerca.html" class="link"> Acerca</a>
+                <a class=nav href="contacto.html" class="link"> Contacto</a>
+                <a class=nav href="registrese.html" class="link"> Registro</a>
+                <a class=nav href="sucursales.html" class="link"> Sucursales</a>
             </div>
-   
+             
             <h1><b>Registrese</b></h1>
 
             </div>
