--- a/TP curso/sopacalabaza.html
+++ b/TP curso/sopacalabaza.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pagina de Ejemplo</title>
+    <title>info</title>
 </head>
 
 <body>
@@ -15,12 +15,11 @@
         <Header>
             <div>
                 <a class=nav href="index.html" class="link"> Home</a>
-                <a class=nav href="acerca.html" class="link"> Acerca de</a>
+                <a class=nav href="acerca.html" class="link"> Acerca</a>
                 <a class=nav href="contacto.html" class="link"> Contacto</a>
-                <a class=nav href="registrese.html" class="link"> Registrese</a>
+                <a class=nav href="registrese.html" class="link"> Registro</a>
                 <a class=nav href="sucursales.html" class="link"> Sucursales</a>
-            </div>
-          
+            </div> 
 
             <h1><b>La cocina de Matias</b></h1>
 
