--- a/TP curso/contacto.html
+++ b/TP curso/contacto.html
@@ -7,9 +7,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pagina de Ejemplo</title>
-<!--     <link rel="stylesheet" href="css/normalize.css">
- -->    <link rel="stylesheet" href="css/estilos.css">
+    <title>validar JS</title>
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 
 <body>
@@ -17,9 +16,9 @@
         <Header>
             <div>
                 <a class=nav href="index.html" class="link"> Home</a>
-                <a class=nav href="acerca.html" class="link"> Acerca de</a>
+                <a class=nav href="acerca.html" class="link"> Acerca</a>
                 <a class=nav href="contacto.html" class="link"> Contacto</a>
-                <a class=nav href="registrese.html" class="link"> Registrese</a>
+                <a class=nav href="registrese.html" class="link"> Registro</a>
                 <a class=nav href="sucursales.html" class="link"> Sucursales</a>
             </div>
 
