--- a/TP curso/contacto.html
+++ b/TP curso/contacto.html
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>validar JS</title>
     <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/styles.css" TYPE="text/css" MEDIA=screen> 
+
 </head>
 
 <body>
@@ -22,7 +24,7 @@
                 <a class=nav href="sucursales.html" class="link"> Sucursales</a>
             </div>
 
-            <h1><B>Contacto</B></h1>
+            <p class="titlecustom"> <h1><B>Contacto</B></h1></p>
 
             </div>
         </Header>
@@ -64,7 +66,7 @@
             </div>
 
             <h5>
-                Derechos reservados 2020
+                Derechos reservados 2021
             </h5>
 
         </div>
