--- a/TP curso/index.html
+++ b/TP curso/index.html
@@ -8,9 +8,9 @@
     <LINK REL=StyleSheet HREF="css/main.css" TYPE="text/css" MEDIA=screen>
     <script src="https://kit.fontawesome.com/b1866a9c98.js" crossorigin="anonymous"></script>
     <title>Responsive</title>
-    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css" TYPE="text/css" MEDIA=screen>
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700,900" rel="stylesheet"> 
+    <link rel="stylesheet" href="css/styles.css" TYPE="text/css" MEDIA=screen> 
+
 </head>
 
 <body>
@@ -25,9 +25,8 @@
                 <a class=nav href="registrese.html" class="link"> Registro</a>
                 <a class=nav href="sucursales.html" class="link"> Sucursales</a>
             </div>
-            
-            <h1><B>La cocina de Matias</B> </h1>
-
+                <p class="titlecustom"> <h1><B>La cocina de Matias</B></h1> </p>            </div>
+           
         </Header>
 
 
@@ -101,7 +100,7 @@
             </div>
 
             <h5>
-                Derechos reservados 2020
+                Derechos reservados 2021
             </h5>
 
         </div>
