--- a/TP curso/acerca.html
+++ b/TP curso/acerca.html
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Transicion</title>
   <link rel="stylesheet" href="css/estilos.css">
+  <link rel="stylesheet" href="css/styles.css" TYPE="text/css" MEDIA=screen> 
 
 </head>
 
@@ -20,9 +21,9 @@
         <a class=nav href="acerca.html" class="link"> Acerca</a>
         <a class=nav href="contacto.html" class="link"> Contacto</a>
         <a class=nav href="registrese.html" class="link"> Registro</a>
-        <a class=nav href="sucursales.html" class="link"> Sucursales</a>
-    </div>
-      <h1><B>Acerca de nosotros</B></h1>
+        <a class=nav href="sucursales.html" class="link"> Sucursales</a> 
+      </div>
+      <p class="titlecustom"> <h1><B>Acerca de nosotros</B></h1> </p>
       </div>
     </Header>
     <h2>
@@ -53,7 +54,7 @@
       </div>
 
       <h5>
-        Derechos reservados 2020
+        Derechos reservados 2021
       </h5>
 
     </div>
