--- a/TP curso/registrese.html
+++ b/TP curso/registrese.html
@@ -4,8 +4,10 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 <LINK REL=StyleSheet HREF="css/main.css" TYPE="text/css" MEDIA=screen>
+    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/styles.css" TYPE="text/css" MEDIA=screen> 
 
-<head>
+    <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,21 +18,21 @@
     <main>
         <Header>
             <div>
-                <a class=nav href="index.html" class="link"> Home</a>
-                <a class=nav href="acerca.html" class="link"> Acerca</a>
-                <a class=nav href="contacto.html" class="link"> Contacto</a>
-                <a class=nav href="registrese.html" class="link"> Registro</a>
-                <a class=nav href="sucursales.html" class="link"> Sucursales</a>
+                <a class=navcustom href="index.html" class="link"> Home</a>
+                <a class=navcustom href="acerca.html" class="link"> Acerca</a>
+                <a class=navcustom href="contacto.html" class="link"> Contacto</a>
+                <a class=navcustom href="registrese.html" class="link"> Registro</a>
+                <a class=navcustom href="sucursales.html" class="link"> Sucursales</a>
             </div>
              
-            <h1><b>Registrese</b></h1>
+            <p class="titlecustom"> <h1><b>Registrese</b></h1> </p>
 
             </div>
         </Header>
 
-        <h3>
-            Formulario de registro
-        </h3>
+        <!-- <h3><b>
+            Formulario de registro </b>
+        </h3> -->
 
         <form action="show_data.html" target="_blank" class="formulario" aria-label="Formulario de registro">
             <div class="form-group">
@@ -98,7 +100,7 @@
             </div>
 
             <h5>
-                Derechos reservados 2020
+                Derechos reservados 2021
             </h5>
 
         </div>
