--- a/TP curso/sopacalabaza.html
+++ b/TP curso/sopacalabaza.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <LINK REL=StyleSheet HREF="css/main.css" TYPE="text/css" MEDIA=screen>
 <script src="https://kit.fontawesome.com/b1866a9c98.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="css/styles.css" TYPE="text/css" MEDIA=screen> 
 
 <head>
     <meta charset="UTF-8" />
@@ -21,7 +22,7 @@
                 <a class=nav href="sucursales.html" class="link"> Sucursales</a>
             </div> 
 
-            <h1><b>La cocina de Matias</b></h1>
+            <p class="titlecustom"> <h1><b>La cocina de Matias</b></h1></p>
 
         </Header>
 
@@ -135,7 +136,7 @@
             </div>
 <!-- test git 33 ol -->
             <h5>
-                Derechos reservados 2020
+                Derechos reservados 2021
             </h5>
 
         </div>
